# read-lines-into-rust-crate

./: Cargo.toml  README.md  example-with-crlf.txt  example-with-indent.txt
src/: lib.rs  traits.rs
src/buf_reader/: read_lines_into_string.rs  read_lines_into_string_with_clip.rs  read_lines_into_string_with_trim.rs  read_lines_into_strings.rs  read_lines_into_strings_with_clip.rs  read_lines_into_strings_with_trim.rs  read_lines_into_vec_string.rs  read_lines_into_vec_string_with_clip.rs  read_lines_into_vec_string_with_trim.rs
src/file/: read_lines_into_string.rs  read_lines_into_string_with_clip.rs  read_lines_into_string_with_trim.rs  read_lines_into_strings.rs  read_lines_into_strings_with_clip.rs  read_lines_into_strings_with_trim.rs  read_lines_into_vec_string.rs  read_lines_into_vec_string_with_clip.rs  read_lines_into_vec_string_with_trim.rs
src/path/: read_lines_into_string.rs  read_lines_into_string_with_clip.rs  read_lines_into_string_with_trim.rs  read_lines_into_strings.rs  read_lines_into_strings_with_clip.rs  read_lines_into_strings_with_trim.rs  read_lines_into_vec_string.rs  read_lines_into_vec_string_with_clip.rs  read_lines_into_vec_string_with_trim.rs
