[package]
name = "file_into_string"
version = "1.0.0"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "file_into_string: Rust crate of utility functions to read a file into a string, or a vector of strings, and preserving line endings."
readme = "README.md"
repository = "https://github.com/sixarm/file-into-string-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["file", "read", "line", "read_line"]
categories = ["development-tools", "development-tools::testing", "rust-patterns"]

[dependencies]
