[package]
name = "read_lines_into"
version = "2.0.0"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "Read lines (from a Path, File, etc.) into a struct (a String, a Vec<String>), and with various ways to handle line endings and whitespace."
readme = "README.md"
repository = "https://github.com/sixarm/file-into-string-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["file", "read", "line", "read_line"]
categories = ["development-tools", "development-tools::testing", "rust-patterns"]

[dependencies]
